syntax = "proto3";
package tutorial;

option csharp_namespace = "Google.Protobuf.Protocol";

enum EMessageID
{
    PLAYER_ENTERED_ROOM_RESPONSE = 0;
    PLAYER_ENTERED_ROOM_BRODCAST = 1;
    PLAYER_LEFT_ROOM_RESPONSE = 2;
    PLAYER_LEFT_ROOM_BRODCAST = 3;
    CREATURE_SPAWNED_BRODCAST = 4;
    CREATURE_DESPAWNED_BRODCAST = 5;
    PERFORM_MOVE_REQUEST = 6;
    PERFORM_MOVE_BROADCAST = 7;
    PERFORM_ATTACK_REQUEST = 8;
    PERFORM_ATTACK_BROADCAST = 9;
}

enum ECreatureState
{
    IDLE = 0;
    MOVE = 1;
    ATTACK = 2;
    DEAD = 3;
}

enum EMoveDirection
{
    NONE = 0;
    UP = 1;
    DOWN = 2;
    LEFT = 4;
    RIGHT = 8;
}

message CreatureInfo
{
    int32 creatureID = 1;
    string name = 2;
    ECreatureState curState = 3;
    int32 cellPosX = 4;
    int32 cellPosY = 5;
    EMoveDirection facingDirection = 6;
    int32 moveSpeed = 7;
}

message PlayerEnteredRoomResponse
{
    CreatureInfo newPlayer = 1;
    repeated CreatureInfo otherPlayers = 2;
}

message PlayerEnteredRoomBrodcast
{
    CreatureInfo newPlayer = 1;
}

message PlayerLeftRoomResponse
{

}

message PlayerLeftRoomBrodcast
{
    int32 otherPlayerID = 1;
}

message CreatureSpawnedBrodcast
{
    CreatureInfo newCreatureInfo = 1;
}

message CreatureDespawnedBrodcast
{
    int32 oldObjectID = 1;
}

message PerformMoveRequest
{
    EMoveDirection moveDirection = 1;
    int32 curCellPosX = 2;
    int32 curCellPosY = 3;
}

message PerformMoveBroadcast
{
    int32 creatureID = 1;
    EMoveDirection moveDirection = 2;
    int32 targetCellPosX = 3;
    int32 targetCellPosY = 4;
}
